Fixes #20530: ensure links in table are readable.
Links in highlighted rows weren't readable.  This commit fixes the links
so they are readable by changing the highlight color to the PF default.

http://projects.theforeman.org/issues/20530

--- a/app/assets/stylesheets/bastion/tables.scss
+++ b/app/assets/stylesheets/bastion/tables.scss
@@ -31,11 +31,6 @@
   tr.focus td,
   tr.selected-row td {
     background-color: $hover-bg-color;
-    color: $hover-color;
-
-    > a {
-      color: $hover-color;
-    }
 
     button, select {
       color: #000;
