--- a/app/assets/stylesheets/bastion/variables.scss
+++ b/app/assets/stylesheets/bastion/variables.scss
@@ -1,5 +1,5 @@
 $hover-color: #FFF;
-$hover-bg-color: rgb(0, 153, 211);
+$hover-bg-color: #def3ff;
 $label-color: #000;
 $border_color: #d7d7d7;
 $grid-gutter-width: 30px;
